# storytelling-with-data

./: .gitignore  README.md  SKILL.md  pyproject.toml
narrativa_datos/: __init__.py  atencion.py  config.py  contexto.py  depurador_ruido.py  diagnostico.py  evaluador_diseno.py  narrador.py  plantillas.py  redisenador.py  seleccionador_grafico.py
tests/: test_narrativa.py
texto/: contexto_completo.txt
