[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "narrativa-datos"
version = "1.0.0"
description = "Herramientas de Narrativa con Datos — Visualización y narrativa profesional basada en Cole Nussbaumer Knaflic"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Antigravity"}]
keywords = ["visualizacion-datos", "narrativa-datos", "storytelling", "diseño-graficos"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
desarrollo = [
    "pytest>=9.0.0",
    "ruff>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["narrativa_datos"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
